# agent-translation

./: .dockerignore  .env.example  .gitignore  =1.1  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.sh  start.bat  start.sh
.claude/: settings.local.json
.github/workflows/: build.yml
config/: settings.yaml
config/languages/: structural_notes.yaml
config/prompts/: naturalness_review.md  terminology.md  translator_unified.md
config/styles/: _template.yaml  business.yaml  casual.yaml  formal.yaml  literary.yaml  technical.yaml
data/: jobs.db  prompt_versions.json  terminology.db
data/samples/: test.pptx  test.srt  test_vi.srt  test_zh-CN.review.json  test_zh-CN.srt
docs/: introduction.md
docs/prototype/: create-panel-vertical.html  layout-migration-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: capture-ui.mjs  export-html.mjs
frontend/ui-capture/: ui-standalone.html
prototype/: task-card-layers.html
scripts/: README.md  build_macos.sh  build_macos.spec  build_windows.bat  build_windows.spec  run_server.sh
src/: desktop_app.py  main.py  server.py
src/db/: __init__.py  base.py  models.py
src/llm/: __init__.py  poe_client.py  sudo_client.py
src/models/: __init__.py  content.py  glossary.py  task.py
src/orchestrator/: __init__.py  agent.py
src/parser/: __init__.py  _subtitle_utils.py  ass_parser.py  base.py  docx_parser.py  html_parser.py  (+12 more)
tests/: run_real_files_e2e.py  test_docx_per_paragraph.py  test_pptx_per_paragraph.py
(+72 files in other folders)
